style: MediaDetails: fix overflow width md< screen
* add width: 100% to .media-container

--- a/src/pages/MediaDetailsPage/MediaDetailsPage.scss
+++ b/src/pages/MediaDetailsPage/MediaDetailsPage.scss
@@ -18,6 +18,8 @@
 .media-container {
   margin: 0 auto;
   margin-top: 1rem;
+  width: 100%;
+  // fixes width overflow md< screen
 }
 
 .media-details {
